vcluster_versioned_docs/version-0.37.0/production-guide/enterprise-ai-factory.mdx
---
title: Enterprise AI Factory
sidebar_label: Enterprise AI Factory
sidebar_position: 4
description: Build an internal AI platform for your organization's teams. Day 0, Day 1, and Day 2 path for enterprise AI platforms.
---

import SharedNodesSuitability from '@site/vcluster/_partials/admonitions/shared-nodes-suitability.mdx';

Give every team in your organization a production-grade AI environment without the overhead of managing separate clusters. Production ML teams get private GPU nodes and full isolation. Dev and experiment teams share a node pool and provision on demand. Platform keeps everything governed, audited, and within budget.

**Customer access model:** Internal teams with Kubernetes access, tiered by trust and workload. **Worker-node model:** Private nodes for production ML teams, shared nodes for trusted internal dev and experiment tiers.

**Typical stack:** Platform on an existing cloud Kubernetes cluster or Standalone on-premises. Private nodes for production ML teams. Shared node pool for dev and experiment workloads. vMetal optional for on-premises GPU fleets.

<SharedNodesSuitability />

This path serves your organization's own teams. The shared node tier is for internal dev and experiment workloads only. If you serve external customers or resell access, use the [AI Cloud](./ai-cloud.mdx) path, which gives each customer private nodes.

<figure>
  <img
    style={{ display: "block", margin: "0 auto", maxWidth: "100%" }}
    src="/docs/img/production-paths/ai-factory.png"
    alt="Enterprise AI factory architecture: central control plane managing private GPU nodes for production ML teams and a shared node pool for dev and experiment workloads"
  />
  <figcaption>Central <GlossaryTerm term="control-plane">control plane</GlossaryTerm> managing private GPU nodes for ML teams alongside a shared pool for dev workloads</figcaption>
</figure>

**What makes this path different:** Your teams use Platform directly, or through an internal portal built on top of it. Self-service provisioning, standardized GPU environments, and chargeback visibility are what you are building toward.

## Day 0: Design decisions

| Decision | Read next | Outcome |
| --- | --- | --- |
| Decide the Control Plane Cluster foundation | [Architecture](../introduction/architecture.mdx), [Deployment basics](../deploy/control-plane/kubernetes-pod/basics.mdx) | Run the Control Plane Cluster on an existing managed Kubernetes service (EKS, AKS, GKE) or vCluster Standalone on on-premises servers. |
| Define team tenancy tiers | [Private Nodes](../deploy/worker-nodes/private-nodes/overview.mdx), [Deployment basics](../deploy/control-plane/kubernetes-pod/basics.mdx) | Classify teams: production AI workloads on private GPU nodes, and dev and experiment workloads on shared nodes. |
| Define project and quota structure | [Projects](/docs/platform/administer/projects/create), [Quotas](/docs/platform/administer/projects/quotas) | Map projects to teams or business units. Set GPU, CPU, and memory quotas per project. |
| Plan GPU tooling and AI stacks | [Stacks](/docs/platform/next/understand/what-are-stacks), [Certified Stacks](/docs/platform/integrations/certified-stacks) | Use StackTemplates to standardize ordered application deployment. Platform 4.12 includes Certified StackTemplates for dedicated and central NVIDIA Run:ai deployment models; create your own StackTemplates for other schedulers or developer environments. |
| Choose the runtime isolation model | [vNode docs](https://www.vnode.com/docs/) | vNode is recommended when teams run agentic workloads, untrusted code execution, or need root access inside containers without the risk of node escape. |
| Plan SSO and governance | [SSO](/docs/platform/configure/platform-configs/single-sign-on), [RBAC](/docs/platform/administer/users-permissions/overview) | Integrate with your corporate identity provider. Define which teams can self-service create clusters and which require approval. |

## Day 1: Stand up the first production environment

1. Install [vCluster Platform](/docs/platform/install/quick-start-guide) on your Control Plane Cluster.
2. Configure [SSO](/docs/platform/configure/platform-configs/single-sign-on), [teams, and permissions](/docs/platform/administer/users-permissions/overview) against your corporate identity provider.
3. Create [projects](/docs/platform/administer/projects/create), [templates](/docs/platform/administer/templates/overview), and [quotas](/docs/platform/administer/projects/quotas) per team or business unit.
4. Configure the shared node pool: [pod security standard](../configure/vcluster-yaml/policies/pod-security-standard.mdx), [network policy](../configure/vcluster-yaml/policies/network-policy.mdx), and [resource quota](../configure/vcluster-yaml/policies/resource-quota.mdx).
5. Configure private GPU nodes for production teams: [join nodes manually](../deploy/worker-nodes/private-nodes/join.mdx) or configure [Auto Nodes](/docs/platform/administer/node-providers/overview).
6. Set up [vMetal](https://www.vmetal.ai/docs/) if on-premises GPU servers are part of the fleet.
7. If you use NVIDIA Run:ai, choose a supported deployment model and install the [Run:ai Certified Stacks](/docs/platform/integrations/certified-stacks/runai). Otherwise, [create a StackTemplate](/docs/platform/next/administer/templates/create-stack-templates) for your GPU applications and scheduler, then [deploy it to the tenant environment](/docs/platform/next/use-platform/apps/use-stacks#choose-how-to-install-a-stack).
8. Install [vNode](https://www.vnode.com/docs/) on nodes designated for agentic or privileged workloads.
9. Provision the first <GlossaryTerm term="tenant-cluster">tenant cluster</GlossaryTerm> for each tier (shared and private) and validate GPU access, quota enforcement, and network isolation. For shared tiers, confirm the control plane cluster's CNI enforces NetworkPolicy. With `sync.toHost.networkPolicies` enabled, apply a default-deny policy and confirm the blocked connection is refused. See the [security baseline](../security/README.mdx).
10. Document how teams request clusters, retrieve kubeconfigs, request quota increases, and report issues.

## Day 2: Operate

| Operation | Read next |
| --- | --- |
| Monitor platform and team workloads | [Fleet Observability](/docs/platform/maintenance/observability/overview), [other architectures](/docs/platform/next/maintenance/monitoring/fleet-metrics-architectures) |
| Manage private node capacity | [Auto Nodes](/docs/platform/administer/node-providers/overview), [manage private nodes](../deploy/worker-nodes/private-nodes/manage.mdx) |
| Upgrade clusters and Platform | [Upgrade vCluster](../manage/upgrade/upgrade-version.mdx), [upgrade Platform](/docs/platform/maintenance/upgrade-migrate/upgrade) |
| Back up and restore | [Snapshots](../manage/backup-restore/backup.mdx), [Platform backup](/docs/platform/maintenance/backup-restore/backup-restore-platform) |
